--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "owlbear-tooltips",
     "type": "module",
     "version": "1.0.3",
-    "description": "Adds a text tool mode to manage token tooltips; click the info icon for selected tokens to see their tooltips.",
+    "description": "Add custom notes to tokens with a new text tool mode. When selected, tokens with tooltip notes will show an info icon; click it to see the tooltip.",
     "scripts": {
         "dev": "vite",
         "build": "pnpm docs:build && tsc --build && vite build",
