--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Tooltips",
-  "description": "Add custom notes to tokens with a new text tool mode. When selected, tokens with tooltip notes will show an info icon; click it to see the tooltip.",
+  "description": "Add notes to tokens with a new text tool mode. Selected tokens with notes show an info icon; click it to see the tooltip.",
   "version": "1.0.3",
   "manifest_version": 1,
   "author": "desain",
